add clock, cosmetics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/style.css">
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Homepage</title>
+  <title>New Tab</title>
 </head>
 
 <body>
